--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ metatomic = ["metatomic-torch>=0.1.1,<0.2", "metatrain[pet]==2025.7"]
 orb = ["orb-models>=0.5.2"]
 sevenn = ["sevenn>=0.11.0"]
 graphpes = ["graph-pes>=0.0.34", "mace-torch>=0.3.12"]
+nequip = ["nequip>=0.12.0"]
 docs = [
     "autodoc_pydantic==2.2.0",
     "furo==2024.8.6",
